--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches: [ main ]  # main 브랜치에 push될 때 실행
+    branches: [ master ]  # main 브랜치에 push될 때 실행
   workflow_dispatch:    # 수동 실행도 가능
 
 jobs:
