--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,13 @@ jobs:
         host: ${{ secrets.EC2_HOST }}
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
-        port: 80
+        port: 22
         script: |
           # 프로젝트 디렉토리로 이동
-          cd /home/ubuntu/your-project-name
+          cd /home/ubuntu/react
           
           # 최신 코드 가져오기
-          git pull origin main
+          git pull origin master
           
           # 의존성 설치 (package.json이 변경된 경우)
           npm install
@@ -34,8 +34,6 @@ jobs:
           npm run build
           
           # PM2로 앱 재시작 (PM2 사용 시)
-          pm2 restart your-app-name || pm2 start npm --name "your-app-name" -- start
+          pm2 restart app.js || pm2 start npm --name "app.js" -- start
           
-          # 또는 일반적인 재시작 (PM2 미사용 시)
-          # pkill -f "node.*your-app"
-          # nohup npm start > /dev/null 2>&1 &
+          
