--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches: [ master ]  # main 브랜치에 push될 때 실행
+    branches: [ master ]
   workflow_dispatch:    # 수동 실행도 가능
 
 jobs:
@@ -21,19 +21,27 @@ jobs:
         key: ${{ secrets.EC2_SSH_KEY }}
         port: 22
         script: |
-          # 프로젝트 디렉토리로 이동
           cd /home/ubuntu/react
           
-          # 최신 코드 가져오기
-          git pull origin master
+          # Git 안전 디렉토리 설정 (한 번만 필요)
+          git config --global --add safe.directory /home/ubuntu/react
           
-          # 의존성 설치 (package.json이 변경된 경우)
+          # 로컬 변경사항 무시하고 최신 코드 가져오기
+          git fetch origin master
+          git reset --hard origin/master
+          
+          # 의존성 설치
           npm install
           
-          # 빌드가 필요한 경우
-          # npm run build
+          # PM2로 앱 관리 (재시작 또는 시작)
+          if pm2 show my-app > /dev/null 2>&1; then
+            echo "✅ App is running, restarting..."
+            pm2 restart my-app
+          else
+            echo "🚀 App is not running, starting..."
+            pm2 start npm --name "my-app" -- start
+          fi
           
-          # PM2로 앱 재시작 (PM2 사용 시)
-          pm2 restart app.js || pm2 start npm --name "app.js" -- start
-          
-          
+          # 배포 완료 확인
+          echo "🎉 Deployment completed!"
+          pm2 status
